k8s-eks/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ai-frontend-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: ai-frontend
  ports:
    - port: 80
      targetPort: 80
